--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 PORT="3000"
-MONGO_URI="mongodb://root:rahasia@localhost:27017/vlms?authSource=admin"
+MONGO_URI="mongodb://root:rahasia@mongo-digsboard:27017/vlms?authSource=admin"
 ACCESS_TOKEN="access_token_secret"
 REFRESH_TOKEN="refresh_token_secret"
 MAX_AGE_ACCESS_TOKEN="10m"
@@ -7,4 +7,6 @@ MAX_AGE_REFRESH_TOKEN="30d"
 FRONT_END_ORIGIN="http://localhost:5173"
 CSS_URL="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/4.1.0/swagger-ui.min.css"
 NODE_ENV="development"
-TOKEN_OLLAMA="277e471c00744e97aea5b8360a37f958.SJz1VQQHv8lBSHgcqj5odSO0"
+
+# API KEY from https://ollama.com/
+TOKEN_OLLAMA="your_token_ollama"
